test/program3.mj
program MJProgram
	const int a = 2, b = 3;
	const bool isTrue = true;
	int x; int y;
	bool isFalse;
	const char c = 'a';
	// const char notCorrect = 2;
	int arr[];
	int matrix[][];
	int matrixError[][];

{

	int k () int c; {
		c = 2;
		return c+2;
	}

	int main() {
		
		print(1);
		
		arr = new int[5];
		matrix = new int[3][4];
		matrixError = new char[3][4]; // error
		
		arr[1] = 3;
		matrix[1][2] = 3;
		
		matrix[1] = 3; // error
		
		matrix[0] = new int[4];
		
		arr++; // error
		arr[1]++;
		matrix[1][2]--;
		matrix[1]++; // error
		
		arr[1] = new int[3][4]; // error
		matrix = new int[3]; // error
		
		x = y + 5 + 3 ;
		
		print(2);
		
		k();
		
		while (1 < 2 || 1 > 3) {
			break;
		}
		
		break; // error
		
		return 1;
	}
}